# gh-report

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md  SPEC.md  test_analysis.md
data/: 2025-08-12 - Github - Report - 2025-08-05 to 2025-08-12 (13 items).md  2025-08-12 - Github - Report - 2025-08-10 to 2025-08-12.md  2025-08-12 - Github - Report - 2025-08-11 to 2025-08-12 (3 items).md  2025-08-12 - Github - Report - 2025-08-11 to 2025-08-12.md  gh-state.json
docs/design/: 01-github-integration.md  README.md
docs/examples/: basic-config.toml
fixtures/github/: comments.json  issues.json  repository.json
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  progress.rs  state.rs  test_utils.rs  time.rs
src/cache/: compression.rs  key_gen.rs  mod.rs  storage.rs
src/claude/: claude_interface.rs  cli_client.rs  client.rs  mod.rs  models.rs  prompts.rs
src/dynamic/: discovery.rs  mod.rs  scoring.rs
src/github/: client.rs  mod.rs  models.rs  reference.rs
src/intelligence/: context.rs  mod.rs  scoring.rs  watch_rules.rs
src/report/: generator.rs  mod.rs  template.rs
src/summarize/: mod.rs
tests/: github_integration.rs  integration_test.rs
