[package]
name = "gh-daily-report"
version = "0.1.0"
edition = "2021"
authors = ["Carl Lerche"]
description = "Generate intelligent daily GitHub activity reports"
repository = "https://github.com/carllerche/gh-daily-report"
license = "MIT"

[[bin]]
name = "gh-report"
path = "src/main.rs"

[dependencies]
# CLI and configuration - Milestone 1
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utilities - Milestone 1
anyhow = "1.0"
jiff = { version = "0.2", features = ["serde"] }
dirs = "5.0"

# Logging - Milestone 1
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Claude API client - Milestone 4
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Future dependencies (commented for now, will add as needed)
# tokio = { version = "1", features = ["full"] }  # Milestone 9
# indicatif = "0.17"  # Milestone 8
# sha2 = "0.10"  # Milestone 7
# flate2 = "1.0"  # Milestone 7
# regex = "1.10"  # Milestone 5

[dev-dependencies]
# Testing utilities
insta = { version = "1.34", features = ["json", "yaml"] }
tempfile = "3.8"
# wiremock = "0.6"  # Milestone 4
